--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "prop-types": "^15.5.8",
     "react": "^15.4.0",
     "react-dom": "^15.4.0",
+    "react-pull-to-refresh": "^1.0.6",
     "react-tap-event-plugin": "^2.0.1"
   },
   "devDependencies": {
