--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "start": "roadhog server",
     "build": "roadhog build",
     "lint": "eslint --ext .js src test",
-    "precommit": "npm run lint"
+    "precommit": "npm run lint",
+    "deploy": "gh-pages -d dist"
   },
   "engines": {
     "install-node": "6.9.2"
@@ -29,6 +30,7 @@
     "eslint-plugin-jsx-a11y": "^2.2.3",
     "eslint-plugin-react": "^6.8.0",
     "expect": "^1.20.2",
+    "gh-pages": "^1.0.0",
     "husky": "^0.12.0",
     "offline-plugin": "^4.6.2",
     "redbox-react": "^1.3.2",
