--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dva-loading": "^0.2.1",
     "material-ui": "^0.17.3",
     "prop-types": "^15.5.8",
+    "qrcode.react": "^0.7.1",
     "react": "^15.4.0",
     "react-dom": "^15.4.0",
     "react-tap-event-plugin": "^2.0.1"
