--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
     "qrcode.react": "^0.7.1",
     "react": "^15.4.0",
     "react-dom": "^15.4.0",
-    "react-tap-event-plugin": "^2.0.1",
-    "roadhogx": "^1.0.4"
+    "react-flip-move": "^2.9.14",
+    "react-loadable": "^4.0.4",
+    "react-tap-event-plugin": "^2.0.1"
   },
   "devDependencies": {
     "babel-eslint": "^7.1.1",
@@ -36,7 +37,7 @@
     "husky": "^0.12.0",
     "offline-plugin": "^4.6.2",
     "redbox-react": "^1.3.2",
-    "roadhogx": "^1.0.2",
+    "roadhogx": "^1.0.4",
     "svg-sprite-loader": "^0.3.0"
   }
 }
