--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "babel-runtime": "^6.9.2",
     "dva": "^1.2.1",
     "dva-loading": "^0.2.1",
+    "github-markdown-css": "^2.8.0",
+    "marked": "^0.3.6",
     "material-ui": "^0.17.3",
     "prop-types": "^15.5.8",
     "qrcode.react": "^0.7.1",
