--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^15.4.0",
     "react-flip-move": "^2.9.14",
     "react-loadable": "^4.0.4",
+    "react-router-page-transition": "^3.0.2",
     "react-tap-event-plugin": "^2.0.1",
     "respinner": "^2.2.1"
   },
@@ -40,7 +41,7 @@
     "husky": "^0.12.0",
     "offline-plugin": "^4.6.2",
     "redbox-react": "^1.3.2",
-    "roadhogx": "^1.0.4",
+    "roadhogx": "^1.0.11",
     "svg-sprite-loader": "^0.3.0"
   }
 }
